Fixes box shadow not showing up on index page

--- a/public/stylesheets/profiles/index.css
+++ b/public/stylesheets/profiles/index.css
@@ -12,7 +12,7 @@
   margin: 50px 0px 0px 0px;
   padding: 10px;
   background-color: #333341;
-  box-shadow: #37ebea 2px 2x;
+  box-shadow: #37ebea 2px 2px;
   color: #37ebea;
 }
 #avatar-name {
